--- a/main.css
+++ b/main.css
@@ -205,7 +205,7 @@ footer .bttop .fa-right-long {
   }
 
   footer {
-    margin-top: 180px;
+    margin-top: 200px;
   }
 }
 
@@ -323,6 +323,20 @@ footer .bttop .fa-right-long {
   }
 }
 
+@media screen and (max-width: 768px) and (orientation: landscape) {
+  main.container {
+    margin-top: 0;
+  }
+
+  body {
+    padding: 0 1rem;
+  }
+
+  header {
+    padding: 5px 0.5rem;
+  }
+}
+
 @media screen and (max-width: 426px) {
   body {
     padding: 1rem 1.5rem;
@@ -399,7 +413,7 @@ footer .bttop .fa-right-long {
   }
 
   footer {
-    margin-top: 140px;
+    margin-top: 180px;
     padding: 36px 0;
     padding-bottom: 2px;
     display: flex;
@@ -493,7 +507,7 @@ footer .bttop .fa-right-long {
     padding-bottom: 0;
   }
   footer {
-    margin-top: 200px;
+    margin-top: 36vh;
     margin-bottom: 0;
     padding-bottom: 0;
   }
