--- a/main.css
+++ b/main.css
@@ -14,7 +14,9 @@
   --fontFamLucida: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
-
+.white-space {
+  white-space: nowrap;
+}
 html {
   font-size: 100%;
   scroll-behavior: smooth;
@@ -48,13 +50,16 @@ main.container {
   width: 100%;
   display: flex;
   flex-flow: column nowrap;
-  align-items: center;
+  /* align-items: center; */
   justify-content: center;
   gap: 35px;
   padding: 12px 4vw;
 }
 
 .update {
+  align-self: center;
+  width: 50%;
+  margin: 0 auto;
   order: 2;
   -ms-flex-order: 2;
   padding-top: 12px;
@@ -76,11 +81,10 @@ main.container {
   font-weight: 400;
   list-style-type: none;
   display: flex;
-  flex-flow: row wrap;
+  flex-flow: row nowrap;
   align-items: center;
   justify-content: center;
-  column-gap: 6%;
-  row-gap: 10px;
+  column-gap: 5%;
 }
 
 .update ul li:nth-child(3):hover {
@@ -110,6 +114,7 @@ main.container {
 }
 
 main.container .middle {
+  align-self: center;
   width: 10rem;
   margin-bottom: -30px;
 }
@@ -121,6 +126,7 @@ main.container .middle img {
 }
 
 .plinks {
+  align-self: center;
   margin-bottom: 9px;
   order: 6;
   -ms-flex-order: 6;
@@ -136,6 +142,7 @@ main.container .middle img {
   filter: brightness(120%);
 }
 .social {
+  align-self: center;
   order: 7;
   -ms-flex-order: 7;
 }
@@ -223,7 +230,7 @@ footer .bttop .fa-right-long {
   }
   .update p {
     font-size: 1.3rem;
-    line-height: 1.1rem;
+    line-height: 1.4rem;
     font-weight: 400;
     margin-bottom: 12px;
     text-align: center;
@@ -362,7 +369,7 @@ footer .bttop .fa-right-long {
   }
 
   main.container {
-    width: 88%;
+    width: 90%;
     margin: 0 auto;
     margin-top: 5%;
     padding-bottom: 8px;
@@ -372,6 +379,7 @@ footer .bttop .fa-right-long {
     border: 1px solid silver;
   }
   .update {
+    width: 100%;
     padding: 0;
     margin: 6px 0;
     padding-top: 8px;
@@ -380,6 +388,10 @@ footer .bttop .fa-right-long {
     gap: 1rem;
   }
 
+  section .update p {
+    width: 100%;
+    padding-inline: 0;
+  }
   .update ul {
     display: flex;
     flex-flow: column nowrap;
