--- a/main.css
+++ b/main.css
@@ -31,7 +31,7 @@ html::-webkit-scrollbar {
 body {
   font-family: serif;
   word-wrap: break-word;
-  min-height: 100vh;
+  min-height: 120vh;
   display: flex;
   flex-flow: column nowrap;
   justify-content: space-between;
@@ -50,7 +50,6 @@ main.container {
   width: 100%;
   display: flex;
   flex-flow: column nowrap;
-  /* align-items: center; */
   justify-content: center;
   gap: 35px;
   padding: 12px 4vw;
@@ -58,7 +57,6 @@ main.container {
 
 .update {
   align-self: center;
-  width: 50%;
   margin: 0 auto;
   order: 2;
   -ms-flex-order: 2;
@@ -223,7 +221,7 @@ footer .bttop .fa-right-long {
 
 @media screen and (max-width: 858px) {
   body {
-    min-height: 110vh;
+    min-height: 120vh;
   }
   main.container {
     margin-top: 14%;
@@ -236,6 +234,10 @@ footer .bttop .fa-right-long {
     text-align: center;
   }
 
+  .update ul {
+    flex-flow: row wrap;
+    row-gap: 8px;
+  }
   .container.update ul li {
     font-size: 0.85rem;
     margin-bottom: 1.2px;
